[package]
edition = "2021"
name = "tm1638"
version = "0.1.0"
authors = ["Adam Nelson <anelson@users.noreply.github.com>"]
resolver = "2"
#rust-version = "1.76"

[dependencies]
cyw43 = { version = "0.1.0",  features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0",  features = ["defmt", "overclock"] }
embassy-embedded-hal = { version = "0.1.0",  features = ["defmt"] }
embassy-executor = { version = "0.5.0",  features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.4.0",  features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0",  features = ["defmt"] }
embassy-rp = { version = "0.1.0",  features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5.0",  features = ["defmt"] }
embassy-time = { version = "0.3.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.1.0",  features = ["defmt"] }
embassy-usb-logger = { version = "0.1.0"}
usbd-hid = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.8"


embedded-hal-1 = { package = "embedded-hal", version = "1" }
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
#embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

[profile.release]
debug = 2
