[package]
name = "tm1638"
edition.workspace = true
version.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
features = ["defmt", "embassy-rp", "embassy-time"]

[features]
default = ["defmt", "embassy-rp", "embassy-time", "ascii-font"]

# Enable defmt logging in the library, and implement `defmt::Format` on public types
defmt = ["dep:defmt"]

# Embed a very primitive ASCII font to render ASCII chars using 7 seg (+ dot) displays
ascii-font = []

# Enable the bus driver implementation using Embassy on the Pi Pico
embassy-rp = ["dep:embassy-rp"]

# Enable the timer implementation using embassy-time
embassy-time = ["dep:embassy-time"]

[dependencies]
embassy-rp = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }

defmt ={ workspace = true, optional = true}

embedded-hal-1 = { workspace = true }
strum = { workspace = true }
strum_macros ={ workspace = true }
